--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.16.4",
+    "pg": "^7.9.0",
     "sequelize": "^5.8.6"
   }
 }
